# rag-eval-dashboard

./: .env.example  .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
assets/: README.md
data/: eval_questions.json  faq.json
docs/: index.html
src/: __init__.py  answer.py  data.py  evaluate.py  search.py
tests/: conftest.py  test_app.py  test_data.py  test_evaluate.py  test_search.py
